# ToDo

./: .gitignore
backend/: pyproject.toml
backend/app/: api.py  models.py  schemas.py  type.py
backend/app/migrations/: 0001_initial.py  0002_alter_task_deadline_alter_task_ended_at.py  0003_task_tag_alter_task_priority_alter_task_status.py  0004_account_session_user_verification_delete_users_and_more.py  0005_rename_accountid_account_account_id_and_more.py  0006_alter_account_id_alter_session_id_alter_user_id_and_more.py  0007_alter_session_token_alter_verification_value.py  0008_rename_user_id_account_user_and_more.py  0009_remove_task_user.py  0010_remove_account_update_at_account_access_token_and_more.py  0011_rename_update_at_session_updated_at_and_more.py  0012_rename_expired_at_session_expires_at_and_more.py
backend/core/: api.py  settings.py
backend/utils/: decorators.py
frontend/: openapi-ts.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(main)/: layout.tsx  page.tsx
frontend/app/lib/: auth-client.ts  auth.ts  edgestore.ts
frontend/components/: providers.tsx
frontend/components/ui/: alert-dialog.tsx  app-sidebar.tsx  card.tsx  command.tsx  dropzone-image.tsx  edit-task-dialog.tsx  input.tsx  kanban-board.tsx  kanban-card.tsx  kanban-column.tsx  select-priority.tsx  sign-in.tsx  sign-up.tsx  tiptap.tsx  toggle-group.tsx
frontend/hooks/api/: useCreateTask.ts  useDeleteTask.ts  useListTask.ts  useUpdateTask.ts
frontend/lib/: auth.ts
frontend/services/: sdk.gen.ts  types.gen.ts
(+6 files in other folders)
